syntax = "proto3";
package proto;

option go_package = "github.com/spinnaker/kleat/api/client";

// Feature flags
message Features {
  // Enable pipeline template support. Read more at https://github.com/spinnaker/dcd-spec.
  bool pipelineTemplates = 1;

  // Fields below this line are not yet used in any service that kleat supports
  // TODO: Ensure that they are actually needed and move above this line

  bool chaos = 2;
  // Enable canary support. For this to work, you'll need a canary judge configured.
  bool mineCanary = 3;
  bool managedPipelineTemplatesV2UI = 4;
}
